0707_도오명주소페이지_활용서비스

--- a/jusogo.html
+++ b/jusogo.html
@@ -182,31 +182,73 @@
 
 				<div id="slide">
 					<div id="shuttleFrame">
-					<div class="flex-container">
-						<div id="jusoRoadSign">
-							<img src="image/know_addr_1.gif" alt="adressimg">
-						</div>
-						<div id="jusoExplain">
-							<h2>도로명 주소란?</h2>
-							<hr>
-							<p>도로명 주소는
-								<span>도로명 + 건물번호</span>로 이루어져 있습니다.
-							</p>
-							<p>
-								도로명은 도로구간마다 부여한 이름으로<br>
-								<span>명사 + 도로별 구분기준(대로/로/길)</span>으로 구성합니다.
+						<div class="flex-container">
+							<div id="jusoRoadSign">
+								<img src="image/know_addr_1.gif" alt="adressimg">
+							</div>
+							<div id="jusoExplain">
+								<h2>도로명 주소란?</h2>
+								<hr>
+								<p>도로명 주소는
+									<span>도로명 + 건물번호</span>로 이루어져 있습니다.
+								</p>
+								<p>
+									도로명은 도로구간마다 부여한 이름으로<br>
+									<span>명사 + 도로별 구분기준(대로/로/길)</span>으로 구성합니다.
 
-							</p>
+								</p>
 
+							</div>
 						</div>
 					</div>
-					</div><!--shuttleframe-->
-				</div><!--slide-->
-			</div><!--jusoIntro-->
+					<!--shuttleframe-->
+				</div>
+				<!--slide-->
+			</div>
+			<!--jusoIntro-->
 
 		</div>
 		<!--jusoIntro_Frame-->
+		<div id="contentsFrame">
+			<div id="contents" class="flex-container">
+				<div id="userService">
+					<h2>활용 서비스</h2>
 
+					<div id="api" class="flex-container">
+						<!--application programming interface-->
+
+						<!--div.apiBox*4>a[href=#]>img-->
+						<div class="apiBox" title="주소DB제공 새창으로 열림">
+							<a href="#"><img src="image/icon_service_1.gif" alt="icon_service01"></a>
+							<span>주소 DB <br>제공</span>
+						</div>
+						<div class="apiBox" title="주소DB연계 새창으로 열림">
+							<a href="#"><img src="image/icon_service_2.png" alt="icon_service_2"></a>
+							<span>주소 DB <br>연계</span>
+						</div>
+						<div class="apiBox" title="오픈API 새창으로 열림">
+							<a href="#"><img src="image/icon_service_3.png" alt="icon_service_3"></a>
+							<span>오픈 <br> API</span>
+						</div>
+						<div class="apiBox" title="주소검색솔루션 새창으로 열림">
+							<a href="#"><img src="image/icon_service_4.png" alt="icon_service_4"></a>
+							<span>주소 검색 <br>솔루션</span>
+						</div>
+					</div>
+				</div>
+				<!--userService-->
+				<div id="noticeBoard">
+
+				</div>
+				<!--noticeBoard-->
+				<div id="helpCenter">
+
+				</div>
+				<!--helpCenter-->
+			</div>
+			<!--contents-->
+		</div>
+		<!--contentsFrame-->
 	</div>
 	<!--wrap-->
 </body>
